--- a/dolar-service-online.yml
+++ b/dolar-service-online.yml
@@ -1,25 +1,30 @@
+server:
+  port: 8761
+
 spring:
+  application:
+    name: eureka-service
   datasource:
-    driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://${DB_HOST:postgres-db}:${DB_PORT:5432}/${DB_NAME:ecopila_db_online}
-    username: ${DB_USER:admin}
-    password: ${DB_PASS:password}
+    url: jdbc:h2:file:/data/eureka-db;DB_CLOSE_ON_EXIT=FALSE;AUTO_RECONNECT=TRUE
+    driver-class-name: org.h2.Driver
+    username: sa
+    password:
   jpa:
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
+    database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
       ddl-auto: update
-  data:
-    redis:
-      host: ${REDIS_HOST:redis-online}
-  cloud:
-    config:
-      fail-fast: true # Le dice a la app que falle si no puede conectar al arrancar
-      retry:
-        initial-interval: 2000 # Espera 2 segundos antes del primer reintento
-        max-interval: 10000   # Tiempo máximo de espera entre reintentos (10s)
-        multiplier: 1.5       # Multiplica el intervalo en cada reintento
-        max-attempts: 10 
+
 eureka:
+  instance:
+    hostname: eureka-service-online
   client:
-    serviceUrl:
-      defaultZone: http://eureka-service-online:8761/eureka/
+    register-with-eureka: false
+    fetch-registry: false
+    service-url:
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+
+app:
+  offline-mode: true
+  sincronizacion:
+    url-nube: "http://192.168.0.14:9083"
+    intervalo: 60000
